Donor sign up alignment issues fixed using same CSS elements as Mothers signup

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -159,9 +159,13 @@ button .call-to-action-button {
   border-radius: 10px;
 }
 
-.signup-title {
+.signup-login-title {
   font-size: 2vw;
   text-align: center;
+}
+
+.signup-login-box {
+  margin-top: 50px;
 }
 
 /* == MOTHER REQUESTS PAGE == */
